--- a/Web.Statu/Views/Home/Subjekt_OtherDB.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_OtherDB.cshtml
@@ -17,7 +17,7 @@
     List<string> tabs = new List<string>();
     List<string> results = new List<string>();
     var insRes = HlidacStatu.Lib.Data.Insolvence.Insolvence.SimpleSearch("ico:" + Model.ICO, 1, 5, (int)HlidacStatu.Lib.Searching.InsolvenceSearchResult.InsolvenceOrderResult.LatestUpdateDesc, false, false);
-    var resVZ = HlidacStatu.Lib.Data.VZ.VerejnaZakazka.Searching.SimpleSearch("ico:" + Model.ICO, null, 1, 5, 1);
+    var resVZ = HlidacStatu.Lib.Data.VZ.VerejnaZakazka.Searching.SimpleSearch("ico:" + Model.ICO, null, 1, 5, "1");
 
     if (insRes.IsValid && insRes.Total > 0)
     {
