--- a/Web.Statu/Views/Home/Subjekt_OtherDB.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_OtherDB.cshtml
@@ -31,7 +31,7 @@
     {
         tabs.Add($"Účast ve veřejných zakázkách ({HlidacStatu.Util.RenderData.Vysledky.PocetVysledku(resVZ.Total)})");
         results.Add(
-            SearchResults.VZTableResult(this.User, this.Request, 5, resVZ, true).ToHtmlString()
+            SearchResults.VZTableResult(this.User, this.Request, 5, resVZ, small: true).ToHtmlString()
         );
     }
     var queries = HlidacStatu.Lib.Data.External.DataSets.Search.GetSpecificQueriesForDatasets("ICO", Model.ICO, true);
