--- a/Web.Statu/Views/VZ/_SearchResult.cshtml
+++ b/Web.Statu/Views/VZ/_SearchResult.cshtml
@@ -40,10 +40,17 @@ else
     {
         <hr />
 
-
+        <script>
+            function changeOrderVZ(sel) {
+                var value = sel.value;
+                window.location.href = '@Html.Raw(HlidacStatu.Lib.Searching.VerejnaZakazkaSearchData.GetSearchUrl(
+                                           this.Request.Url.Scheme + "://" + this.Request.Url.Host + this.Request.Url.AbsolutePath
+                                           ,Model.Q, Zahajeny: Model.Zahajeny, oblast: Model.Oblast))&order=' + value;
+            }
+        </script>
 
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 col-sm-6">
                 <h3>
                     Nalezené veřejné zakázky
                     <small>
@@ -51,106 +58,27 @@ else
                     </small>
                 </h3>
                 @*@if (Model.Result.Aggregations != null && Model.Result.Aggregations.ContainsKey("sumKc"))
-        {
-            double? sum = ((Nest.ValueAggregate)Model.Result.Aggregations["sumKc"]).Value;
-            <h4>
-                Celková cena nalezených smluv @Html.Raw(HlidacStatu.Lib.Data.Smlouva.ShortNicePrice(Convert.ToDecimal(sum.Value), html: true))
-            </h4>
-        }*@
+            {
+                double? sum = ((Nest.ValueAggregate)Model.Result.Aggregations["sumKc"]).Value;
+                <h4>
+                    Celková cena nalezených smluv @Html.Raw(HlidacStatu.Lib.Data.Smlouva.ShortNicePrice(Convert.ToDecimal(sum.Value), html: true))
+                </h4>
+            }*@
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <br />
+                @Html.DropDownListFor(m => m.Order, Model.OrderList, new { @class = "form-control small pull-right", @id = "orderListVZ", @style = "width:60%;max-width:300px", @onchange = "changeOrderVZ(this);" })
             </div>
         </div>
 
         <table class="table table-hover">
             <thead>
-                <tr>
-                    <th>Zakázka</th>
-                    <th>Poslední změna</th>
-                    <th>Lhůta pro nabídky</th>
-                    <th>Zadavatel</th>
-                    <th>Dodavatelé</th>
-                    <th>Název</th>
-                    <th>Cena</th>
-                </tr>
+                @SearchResults.VZHeader()
             </thead>
             <tbody>
                 @foreach (var item in Model.Result.Hits.Select(m => m.Source))
                 {
-                <tr class="first">
-                    <td style="white-space: nowrap;">
-                        @Util.NoWrapHtml(
-                            Util.AddBookmark(this.User, item),
-                            Html.Raw("&nbsp;"),
-                            Util.IfExists(HlidacStatu.Web.Framework.LimitedAccess.IsAuthenticatedOrSearchCrawler(this.Request),
-                              $"<a href='{Url.Action("Zakazka", new { id = item.Id, QS = Model.Q })}'>{item.EvidencniCisloZakazky}</a>",
-                              $"<a href='#' data-toggle='modal' data-target='#VZInfoAnon' data-url='/zakazka/@item.Id'>{item.EvidencniCisloZakazky}</a>"
-                              )
-                        )
-                    </td>
-                    <td>
-                        @(item.PosledniZmena?.ToShortDateString())
-                    </td>
-                    <td>
-                        @(item.LhutaDoruceni?.ToShortDateString() ?? "neuvedena")
-                    </td>
-                    <td>
-                        @if (item.Zadavatel != null)
-                        {
-                            if (HlidacStatu.Util.DataValidators.CheckCZICO(item.Zadavatel.ICO))
-                            {
-                                <a href="/subjekt/@item.Zadavatel.ICO">@item.Zadavatel.Jmeno</a>
-                            }
-                            else
-                            {
-                                <span>@item.Zadavatel.Jmeno</span>
-                            }
-                        }
-                    </td>
-                    <td>
-                        @if (item.Dodavatele != null && item.Dodavatele.Count() > 0)
-                        {
-                            foreach (var d in item.Dodavatele)
-                            {
-                                if (HlidacStatu.Util.DataValidators.CheckCZICO(d.ICO))
-                                {
-                                    <a href="/subjekt/@d.ICO">@d.Jmeno</a><br />
-                                }
-                                else
-                                {
-                                    <span>@d.Jmeno</span><br />
-                                }
-
-                            }
-                        }
-                    </td>
-                    <td>
-                        @Devmasters.Core.TextUtil.ShortenText(item.NazevZakazky,50)
-                    </td>
-                    <td>
-                        <b>
-                            @if (item.KonecnaHodnotaBezDPH.HasValue)
-                            {
-                                @Html.Raw(HlidacStatu.Util.RenderData.NicePrice(item.KonecnaHodnotaBezDPH.Value, html: true))
-                            }
-                            else if (item.OdhadovanaHodnotaBezDPH.HasValue)
-                            {
-                                <span>odhad.cena </span> @Html.Raw(HlidacStatu.Util.RenderData.NicePrice(item.OdhadovanaHodnotaBezDPH.Value, html: true))
-                            }
-                            else
-                            {
-                                <span></span>
-                            }
-                        </b>
-                    </td>
-                </tr>
-                    <tr class="last">
-                        <td></td>
-                        <td colspan="2" ><span class="small">@(item.LastestFormular()?.DruhFormulare().ToNiceDisplayName())</span></td>
-                        <td colspan="4">
-                            <span class="small">
-                                @Devmasters.Core.TextUtil.ShortenText(item.PopisZakazky, 900, "...")
-                            </span>
-                        </td>
-                    </tr>
+                    @SearchResults.VZRow(this.User, this.Request, item, Model.Q, small: Model.SmallRender)
                 }
             </tbody>
         </table>
