--- a/Web.Statu/Views/Home/Subjekt_Profile.cshtml
+++ b/Web.Statu/Views/Home/Subjekt_Profile.cshtml
@@ -547,29 +547,9 @@ else
                     HlidacStatu.Lib.Searching.DotaceSearchResult.DotaceOrderResult.FastestForScroll, false,
                     dotaceAggs, exactNumOfResults: true);
 
-
-                var dotaceAggsH = new Nest.AggregationContainerDescriptor<HlidacStatu.Lib.Data.Dotace.Dotace>()
-                    .Terms("icos", s => s
-                        .Field(f => f.Prijemce.Ico)
-                        .Size(5000)
-                        .Aggregations(a => a
-                            .Sum("sum", ss => ss.Field(ff => ff.DotaceCelkem))
-                        )
-                    );
-                var dotaceSearchH = new HlidacStatu.Lib.Data.Dotace.DotaceService().SimpleSearch("holding:" + Model.ICO, 1, 1,
-                    HlidacStatu.Lib.Searching.DotaceSearchResult.DotaceOrderResult.FastestForScroll, false,
-                    dotaceAggsH, exactNumOfResults: true);
+                string durl = "/dotace/hledat?Q=ico%3A+" + Model.ICO;
                 var sdotaceKc = " v celkové hodnotě <b>" + HlidacStatu.Util.RenderData.NicePrice((decimal)dotaceSearch.Result.Aggregations.Sum("souhrn").Value) + "</b>.";
 
-                decimal sumH = 0;
-                var items = ((BucketAggregate)dotaceSearchH.Result.Aggregations["icos"]).Items;
-                foreach (KeyedBucket<object> item in items)
-                {
-                    sumH += (decimal)item.Sum("sum").Value;
-                }
-                var sdotaceHKc = " v celkové hodnotě <b>" + HlidacStatu.Util.RenderData.NicePrice(sumH) + "</b>.";
-                string durl = "/dotace/hledat?Q=ico%3A+" + Model.ICO;
-                string durlH = "/dotace/hledat?Q=holding%3A+" + Model.ICO;
             }
             <tr>
                 <th id="_dotace">Dotace</th>
@@ -582,26 +562,49 @@ else
                                     " dostala <a href='" + durl + "'><b>{0} dotace</b></a>" + sdotaceKc,
                                     " dostala <a href='" + durl + "'><b>{0} dotací</b></a>" + sdotaceKc))
                     </p>
-                    @if (dotaceSearchH.Total > 0)
+                    @if (Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count() > 0)
                     {
-                <p>
-                    <b>@Devmasters.Core.Lang.Plural.Get(items.Count, "Jedna dceřinná společnost", "{0} dceřinné společnosti", "{0} dceřinných společností")</b>
-                    firmy @Devmasters.Core.TextUtil.ShortenText(Model.Jmeno, 35)
-                    (z @HlidacStatu.Util.RenderData.NiceNumber(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Length))
 
-                    @Devmasters.Core.Lang.Plural.Get(items.Count,
-                         "dostala",
-                         "dostaly",
-                         "dostalo")
-                    @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)dotaceSearchH.Total,
-                                                     " žádnou dotaci.",
-                                                     " <a href='" + durlH + "'><b>jednu dotaci</b></a>" + sdotaceHKc,
-                                                     " <a href='" + durlH + "'><b>{0} dotace</b></a>" + sdotaceHKc,
-                                                     " <a href='" + durlH + "'><b>{0} dotací</b></a>" + sdotaceHKc))
+                        var dotaceAggsH = new Nest.AggregationContainerDescriptor<HlidacStatu.Lib.Data.Dotace.Dotace>()
+                            .Terms("icos", s => s
+                                .Field(f => f.Prijemce.Ico)
+                                .Size(5000)
+                                .Aggregations(a => a
+                                    .Sum("sum", ss => ss.Field(ff => ff.DotaceCelkem))
+                                )
+                            );
+                        var dotaceSearchH = new HlidacStatu.Lib.Data.Dotace.DotaceService().SimpleSearch("holding:" + Model.ICO, 1, 1,
+                            HlidacStatu.Lib.Searching.DotaceSearchResult.DotaceOrderResult.FastestForScroll, false,
+                            dotaceAggsH, exactNumOfResults: true);
 
-                </p>
+                        decimal sumH = 0;
+                        var items = ((BucketAggregate)dotaceSearchH.Result.Aggregations["icos"]).Items;
+                        foreach (KeyedBucket<object> item in items)
+                        {
+                            sumH += (decimal)item.Sum("sum").Value;
+                        }
+                        var sdotaceHKc = " v celkové hodnotě <b>" + HlidacStatu.Util.RenderData.NicePrice(sumH) + "</b>.";
+                        string durlH = "/dotace/hledat?Q=holding%3A+" + Model.ICO;
+                        if (dotaceSearchH.Total > 0)
+                        {
+                            <p>
+                                <b>@Devmasters.Core.Lang.Plural.Get(items.Count, "Jedna dceřinná společnost", "{0} dceřinné společnosti", "{0} dceřinných společností")</b>
+                                firmy @Devmasters.Core.TextUtil.ShortenText(Model.Jmeno, 35)
+                                (z @HlidacStatu.Util.RenderData.NiceNumber(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Length))
+
+                                @Devmasters.Core.Lang.Plural.Get(items.Count,
+                                      "dostala",
+                                      "dostaly",
+                                      "dostalo")
+                                @Html.Raw(Devmasters.Core.Lang.Plural.GetWithZero((int)dotaceSearchH.Total,
+                                                                  " žádnou dotaci.",
+                                                                  " <a href='" + durlH + "'><b>jednu dotaci</b></a>" + sdotaceHKc,
+                                                                  " <a href='" + durlH + "'><b>{0} dotace</b></a>" + sdotaceHKc,
+                                                                  " <a href='" + durlH + "'><b>{0} dotací</b></a>" + sdotaceHKc))
+
+                            </p>
+                        }
                     }
-
                 </td>
             </tr>
 
